--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title></title>
 		<script src="script.js"></script>
+		<script src="script1.js"></script>
+		<script src="script2.js"></script>
 	</head>
 	<body>
 		
